# myTime

./: .gitignore  README.md  mapa  pyproject.toml
.github/workflows/: build.yml
.specify/extensions/: .registry
.specify/integrations/: agy.manifest.json  copilot.manifest.json  opencode.manifest.json  pi.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
flatpak/: instrucao.md  io.github.mytime.yml
locales/: en_US.json
scripts/: build_appimage.sh  build_flatpak.sh  dev_install.sh  install.sh
src/myTime/: __init__.py  __main__.py
src/myTime/core/: __init__.py  engine.py  models.py  storage.py
src/myTime/data/: entry.sh  myTime.desktop
src/myTime/locales/: pt_BR.json
src/myTime/ui/: __init__.py  config_dialog.py  journey_dialog.py  main_window.py  task_dialog.py  tray.py
src/myTime/utils/: __init__.py  audio.py  icons.py  notifications.py
tests/: test_engine.py  test_storage.py
